--- a/HTML/login.html
+++ b/HTML/login.html
@@ -20,5 +20,6 @@
     <footer>
         <p>&copy; 2025 Sito di Ticket. Tutti i diritti riservati.</p>
     </footer>
+    <script src="login.js"></script>
 </body>
 </html>
