--- a/HTML/InvioTicket.html
+++ b/HTML/InvioTicket.html
@@ -7,15 +7,17 @@
   <title>Invio Ticket</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="../CSS/InvioTicket.css">
 </head>
 
 
 <body>
 
-  <h1 class="titolo-form ">Apri un ticket</h1>
+  <div class="titolo">
+  <h1 class="titolo-form">Apri un ticket</h1>  </div>
 
-  <div class="box-form ">
+    <div class="blocco-body">
+  <div class="box-form">
     <div class="form-floating mb-3">
       <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
       <label for="floatingTextarea">Titolo</label>
@@ -33,7 +35,7 @@
         <label for="floatingTextarea2">Comments</label>
       </div>
     </div>
-  </div>
+  
   <div class="form-check mb-3">
     <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
     <label class="form-check-label" for="defaultCheck1">
@@ -42,7 +44,8 @@
   </div>
   <button type="submit" class="btn btn-primary mb-3">Invia</button>
   </form>
-
+</div>
+    </div>
 
   <!-- SCRIPT -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
