--- a/HTML/Ticket.html
+++ b/HTML/Ticket.html
@@ -7,77 +7,85 @@
   <title>Ticket</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="../CSS/Ticket.css">
 </head>
 
 <body>
 
-<h1 class="titolo-form ">I miei ticket</h1>
-</div>
-<button type="submit" class="btn btn-primary mb-3">Apri un ticket +</button>
+  <div class="titolo">
+    <h1 class="titolo-form ">I miei ticket</h1>
+    </div>
+    <div class="blocco-body">
+
+<div class="pulsanti">
+  <a href="../HTML/InvioTicket.html"><button type="submit" class="btn btn-primary">Apri un ticket +</button></a>
+</form>
+
+<span class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    Filtri
+  </button>
+  <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
+    <button class="dropdown-item" type="button" id="tutti">Tutti</button>
+    <button class="dropdown-item" type="button" id="APERTO">Aperti</button>
+    <button class="dropdown-item" type="button" id="VISUALIZZATO">Visualizzati</button>
+    <button class="dropdown-item" type="button" id="IN_LAVORAZIONE">In lavorazione</button>
+    <button class="dropdown-item" type="button" id="CHIUSO">Chiusi</button>
+  </div>
+</span>
 </form>
 </div>
-<button type="submit" class="btn btn-primary mb-3">Apri un ticket +</button>
-</form>
 
 <div class="elenco-ticket">
 </div>
 
-<table class="table table-striped">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Nome</th>
-      <th scope="col">Data</th>
-      <th scope="col">Oggetto</th>
-      <th scope="col">Stato</th>
-    </tr>
-  </thead>
-  <tbody  class="table-group-divider">
-    <tr>
-      <th scope="row" id="id_ticket">1</th>
-      <td id="utente_ticket">Mark</td>
-      <td id="data_ticket">Otto</td>
-      <td id="oggetto_ticket">Aiuto</td>
-      <td id="stato_ticket"><div class="">
-        <button type="button" class="btn btn-primary"
-        style="--bs-btn-padding-y: .25rem; --bs-btn-font-size: .85rem; --bs-btn-border-radius: .99rem;">Nuovo</button>
-      </div>
-    </td>
-    </tr>
-    <tr>
-      <th scope="row" id="id_ticket">2</th>
-      <td id="utente_ticket">Mark</td>
-      <td id="data_ticket">Otto</td>
-      <td id="oggetto_ticket">Aiuto</td>
-      <td id="stato_ticket">
-        <button type="button" class="btn btn-primary"
-        style="--bs-btn-padding-y: .25rem; --bs-btn-font-size: .85rem; --bs-btn-border-radius: .99rem;">Visualizzato</button>
-      </div>
-    </td>
-    </tr>
-    <tr>
-      <th scope="row" id="id_ticket">3</th>
-      <td id="utente_ticket">Mark</td>
-      <td id="data_ticket">Otto</td>
-      <td id="oggetto_ticket">Aiuto</td>
-      <td id="stato_ticket">
-        <button type="button" class="btn btn-primary"
-        style="--bs-btn-padding-y: .25rem; --bs-btn-font-size: .85rem; --bs-btn-border-radius: .99rem;">Visualizzato</button>
-      </div>
-    </td>
-    </tr>
-
-<style>
-    .table-striped>tbody>tr:nth-child(odd)>td, 
-  .table-striped>tbody>tr:nth-child(odd)>th {
-   background-color: rgb(203, 227, 255);
- }
-</style>
-
-
-
+<div class="tabella">
+  <table class="table table-striped">
+      <thead>
+          <tr>
+              <th scope="col">#</th>
+              <th scope="col">Nome</th>
+              <th scope="col" class="data-tb">Data apertura</th>
+              <th scope="col" class="data-tb">Data chiusura</th>
+              <th scope="col">Oggetto</th>
+              <th scope="col">Stato</th>
+          </tr>
+      </thead>
+      <tbody id="tbody">
+          
+          </tbody>
+  </table>
+</div>
 
 </body>
 
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>  
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+<script src="../JS/Ticket.js"></script>
+
 </html>
+
+<!--  https://stackoverflow.com/questions/17147821/how-to-make-a-whole-row-in-a-table-clickable-as-a-link
+  https://befused.com/jquery/clickable-table-row/ 
+  
+  <tr>
+              <th id="id_ticket">1</th>
+              <td id="utente_ticket">Mark</td>
+              <td id="data_ticket">Otto</td>
+              <td id="oggetto_ticket">Aiuto</td>
+              <td id="stato_ticket">
+                  <button type="button" class="btn btn-primary stato">Nuovo</button>
+              </td>
+          </tr>
+          <tr>
+            <th scope="row" id="id_ticket">1</th>
+            <td id="utente_ticket">Mark</td>
+            <td id="data_ticket">Otto</td>
+            <td id="oggetto_ticket">Aiuto</td>
+            <td id="stato_ticket">
+              <button type="button" class="btn btn-primary stato">Nuovo</button>
+            </td>
+        </tr>
+        -->
