--- a/HTML/home.html
+++ b/HTML/home.html
@@ -12,16 +12,18 @@
         <div class="header-content">
             <h1>Supporto</h1>
             <p>Benvenuto nel nostro centro di supporto. Come possiamo aiutarti?</p>
+            <a href="login.html" class="login-button">Login</a>
         </div>
     </header>
 
     <main>
-        <!-- Sezione di ricerca -->
-        <section class="search-bar">
-            <form action="#" method="get" role="search">
-                <input type="text" name="query" placeholder="Cerca articoli o soluzioni..." aria-label="Cerca articoli o soluzioni">
-                <button type="submit"><i class="fas fa-search"></i> Cerca</button>
-            </form>
+        <!-- Sezione Apri Ticket -->
+        <section class="open-ticket">
+            <div class="ticket-container">
+                <a href="quiciandràlapaginaticket.html" class="open-ticket-btn">
+                    <i class="fas fa-ticket-alt"></i> Apri un Ticket
+                </a>
+            </div>
         </section>
 
         <!-- Sezione categorie -->
@@ -52,18 +54,18 @@
             <div class="article-grid">
                 <div class="article">
                     <i class="fas fa-key"></i>
-                    <h3>Come reimpostare la password</h3>
-                    <p>Guida passo passo per reimpostare la tua password.</p>
+                    <h3>PROVA PROVA 1</h3>
+                    <p>questo è un testo di prova.</p>
                 </div>
                 <div class="article">
                     <i class="fas fa-wallet"></i>
-                    <h3>Metodi di pagamento accettati</h3>
-                    <p>Elenco dei metodi di pagamento supportati.</p>
+                    <h3>PROVA PROVA 2</h3>
+                    <p>questo è un testo di prova.</p>
                 </div>
                 <div class="article">
                     <i class="fas fa-headset"></i>
-                    <h3>Contattare l'assistenza</h3>
-                    <p>Come aprire un ticket di supporto.</p>
+                    <h3>PROVA PROVA 3</h3>
+                    <p>amo scrivere testi di prova.</p>
                 </div>
             </div>
         </section>
@@ -72,4 +74,9 @@
     <!-- Footer -->
     <footer>
         <p>Hai bisogno di ulteriore aiuto? <a href="#">Contatta il supporto</a></p>
-    </
+    </footer>
+
+    <!-- Pulsante Torna su -->
+    <button id="back-to-top" title="Torna su"><i class="fas fa-arrow-up"></i></button>
+</body>
+</html>
