--- a/HTML/login.html
+++ b/HTML/login.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <h1>Accedi</h1>
-        <form action="#" method="POST">
-            <input type="text" name="username" placeholder="Nome utente" required aria-label="Nome utente">
-            <input type="password" name="password" placeholder="Password" required aria-label="Password">
+        <form id="loginForm" method="POST">
+            <input type="text" name="username" placeholder="Nome utente" required aria-label="Nome utente" autocomplete="off">
+            <input type="password" name="password" placeholder="Password" required aria-label="Password" autocomplete="off">
             <button type="submit">Accedi</button>
         </form>
-        <p>Non hai un account? <a href="#">Registrati</a></p>
+        <p>Non hai un account? <a href="registrazione.html">Registrati</a></p>
     </div>
 
     <footer>
