--- a/HTML/login.html
+++ b/HTML/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Sito di Ticket</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="/CSS/login.css">
 </head>
 <body>
     <div class="container">
@@ -20,6 +20,6 @@
     <footer>
         <p>&copy; 2025 Sito di Ticket. Tutti i diritti riservati.</p>
     </footer>
-    <script src="login.js"></script>
+    <script src="/JS/login.js"></script>
 </body>
 </html>
