tasto home aggiunto un po' ovunque

--- a/HTML/Profile.html
+++ b/HTML/Profile.html
@@ -45,6 +45,10 @@
         </div>
     </div>
     <script src="./JavaS/Profile.js" defer></script>
+    <!-- Pulsante Home -->
+<div class="home-button">
+    <a href="../HTML/Home.html" class="btn-home">Home</a>
+</div>
 
 </body>
 </html>
