--- a/HTML/TicketOperatore.html
+++ b/HTML/TicketOperatore.html
@@ -57,7 +57,10 @@
           </tbody>
   </table>
 </div>
-
+<!-- Pulsante Home -->
+<div class="home-button">
+  <a href="../HTML/Home.html" class="btn-home">Home</a>
+</div>
 </body>
 
 
