--- a/HTML/home.html
+++ b/HTML/home.html
@@ -10,6 +10,7 @@
 <body>
     <header>
         <div class="header-content">
+            
             <h1>Supporto</h1>
             <p>Benvenuto nel nostro centro di supporto. Come possiamo aiutarti?</p>
             <a href="login.html" class="login-button">Login</a>
@@ -20,7 +21,7 @@
         <!-- Sezione Apri Ticket -->
         <section class="open-ticket">
             <div class="ticket-container">
-                <a href="quiciandràlapaginaticket.html" class="open-ticket-btn">
+                <a href="InvioTicket.html" class="open-ticket-btn">
                     <i class="fas fa-ticket-alt"></i> Apri un Ticket
                 </a>
             </div>
@@ -75,6 +76,7 @@
     <footer>
         <p>Hai bisogno di ulteriore aiuto? <a href="#">Contatta il supporto</a></p>
     </footer>
+    
 
     <!-- Pulsante Torna su -->
     <button id="back-to-top" title="Torna su"><i class="fas fa-arrow-up"></i></button>
