--- a/HTML/Registrazione.html
+++ b/HTML/Registrazione.html
@@ -47,6 +47,10 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script src="../JS/Registrazione.js"></script>
+    <!-- Pulsante Home -->
+<div class="home-button">
+    <a href="../HTML/Home.html" class="btn-home">Home</a>
+</div>
        
 </body>
 </html>
