--- a/HTML/Ticket.html
+++ b/HTML/Ticket.html
@@ -56,7 +56,10 @@
           </tbody>
   </table>
 </div>
-
+<!-- Pulsante Home -->
+<div class="home-button">
+  <a href="../HTML/Home.html" class="btn-home">Home</a>
+</div>
 </body>
 
 
@@ -64,5 +67,6 @@
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
 <script src="../JS/Ticket.js"></script>
+
 
 </html>
