--- a/HTML/login.html
+++ b/HTML/login.html
@@ -21,5 +21,9 @@
         <p>&copy; 2025 Sito di Ticket. Tutti i diritti riservati.</p>
     </footer>
     <script src="/JS/login.js"></script>
+    <!-- Pulsante Home -->
+<div class="home-button">
+    <a href="../HTML/Home.html" class="btn-home">Home</a>
+</div>
 </body>
 </html>
