--- a/HTML/login.html
+++ b/HTML/login.html
@@ -10,7 +10,7 @@
     <div class="container">
         <h1>Accedi</h1>
         <form id="loginForm" method="POST">
-            <input type="text" name="username" placeholder="Nome utente" required aria-label="Nome utente" autocomplete="off">
+            <input type="text" name="username" placeholder="Email" required aria-label="Email" autocomplete="off">
             <input type="password" name="password" placeholder="Password" required aria-label="Password" autocomplete="off">
             <button type="submit">Accedi</button>
         </form>
