--- a/HTML/Admin.html
+++ b/HTML/Admin.html
@@ -8,7 +8,7 @@
   <title>Ticket</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="../CSS/Ticket.css">
+  <link rel="stylesheet" href="../CSS/Admin.css">
 </head>
 
 <body>
@@ -43,9 +43,10 @@
           <tr>
               <th scope="col">#</th>
               <th scope="col">Nome</th>
+              <th scope="col">Operatore</th>
               <th scope="col" class="data-tb">Data apertura</th>
               <th scope="col" class="data-tb">Data chiusura</th>
-              <th scope="col">Oggetto</th>
+              <th scope="col" class="data-tb">Oggetto</th>
               <th scope="col">Stato</th>
           </tr>
       </thead>
@@ -61,6 +62,6 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>  
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script> <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 
-<script src="../JS/TicketOperatore.js"></script>
+<script src="../JS/Admin.js"></script>
 
 </html>
