--- a/HTML/TicketOperatore.html
+++ b/HTML/TicketOperatore.html
@@ -42,7 +42,7 @@
       <thead>
           <tr>
               <th scope="col">#</th>
-              <th scope="col">Nome</th>
+              <th scope="col">Email</th>
               <th scope="col" class="data-tb">Data apertura</th>
               <th scope="col" class="data-tb">Data chiusura</th>
               <th scope="col">Oggetto</th>
