--- a/HTML/login.html
+++ b/HTML/login.html
@@ -4,14 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Sito di Ticket</title>
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="../CSS/login.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container-form">
         <h1>Accedi</h1>
-        <form action="#" method="POST">
+        <form  id ="container" method="POST" action="#">
+
             <input type="text" name="username" placeholder="Nome utente" required aria-label="Nome utente">
+            
             <input type="password" name="password" placeholder="Password" required aria-label="Password">
+            
             <button type="submit">Accedi</button>
         </form>
         <p>Non hai un account? <a href="#">Registrati</a></p>
@@ -20,6 +23,6 @@
     <footer>
         <p>&copy; 2025 Sito di Ticket. Tutti i diritti riservati.</p>
     </footer>
-    <script src="login.js"></script>
+    <script src="../JavaS/Login.js" defer></script>
 </body>
 </html>
