--- a/HTML/login.html
+++ b/HTML/login.html
@@ -10,9 +10,9 @@
     <div class="container-form">
         <h1>Accedi</h1>
         <form id="loginForm" method="POST">
-            <input type="text" name="username" placeholder="Email" required aria-label="Email" autocomplete="off">
-            <input type="password" name="password" placeholder="Password" required aria-label="Password" autocomplete="off">
-            <button type="submit">Accedi</button>
+            <input type="text" id="email" placeholder="Email" required aria-label="Nome utente">
+            <input type="password" id="password" placeholder="Password" required aria-label="Password">
+             <button type="submit">Accedi</button>
         </form>
         <p>Non hai un account? <a href="registrazione.html">Registrati</a></p>
     </div>
