--- a/HTML/home.html
+++ b/HTML/home.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supporto - Sito di Ticket</title>
-    <link rel="stylesheet" href="/CSS/home.css">
+    <link rel="stylesheet" href="../CSS/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="header-content">
-            
             <h1>Supporto</h1>
             <p>Benvenuto nel nostro centro di supporto. Come possiamo aiutarti?</p>
-            <a href="login.html" class="login-button">Login</a>
+            <a href="../HTML/login.html" class="login-button">Login</a>
         </div>
     </header>
 
@@ -21,8 +20,8 @@
         <!-- Sezione Apri Ticket -->
         <section class="open-ticket">
             <div class="ticket-container">
-                <a href="InvioTicket.html" class="open-ticket-btn">
-                    <i class="fas fa-ticket-alt"></i> Apri un Ticket
+                <a href="Ticket.html" class="open-ticket-btn">
+                    <i class="fas fa-ticket-alt"></i> Ticket
                 </a>
             </div>
         </section>
