--- a/HTML/login.html
+++ b/HTML/login.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Sito di Ticket</title>
-    <link rel="stylesheet" href="/CSS/login.css">
+    <link rel="stylesheet" href="../CSS/Login.css">
 </head>
 <body>
-    <div class="container-form">
+
+    <div class="container">
         <h1>Accedi</h1>
         <form id="loginForm" method="POST">
-            <input type="text" id="email" placeholder="Email" required aria-label="Nome utente">
-            <input type="password" id="password" placeholder="Password" required aria-label="Password">
-             <button type="submit">Accedi</button>
+            <input type="text" id="email" placeholder="Email" required aria-label="Email" autocomplete="off">
+            <input type="password" id="password" placeholder="Password" required aria-label="Password" autocomplete="off">
+            <button type="submit">Accedi</button>
         </form>
         <p>Non hai un account? <a href="registrazione.html">Registrati</a></p>
     </div>
@@ -23,7 +24,7 @@
     <script src="/JS/login.js"></script>
     <!-- Pulsante Home -->
 <div class="home-button">
-    <a href="../HTML/Home.html" class="btn-home">Home</a>
+    <a href="../HTML/home.html" class="btn-home">Home</a>
 </div>
 </body>
 </html>
