--- a/HTML/login.html
+++ b/HTML/login.html
@@ -11,9 +11,9 @@
         <h1>Accedi</h1>
         <form  id ="container" method="POST" action="#">
 
-            <input type="text" name="username" placeholder="Nome utente" required aria-label="Nome utente">
+            <input type="text" id="email" placeholder="Email" required aria-label="Nome utente">
             
-            <input type="password" name="password" placeholder="Password" required aria-label="Password">
+            <input type="password" id="password" placeholder="Password" required aria-label="Password">
             
             <button type="submit">Accedi</button>
         </form>
