--- a/HTML/InvioTicket.html
+++ b/HTML/InvioTicket.html
@@ -16,29 +16,26 @@
   <div class="titolo">
   <h1 class="titolo-form">Apri un ticket</h1>  </div>
 
-    <div class="blocco-body">
+    <form class="blocco-body"  id="Ticket-form">
   <div class="box-form">
     <div class="form-floating mb-3">
-      <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
-      <label for="floatingTextarea">Titolo</label>
+      <textarea class="form-control " placeholder="Leave a comment here" id="oggetto"></textarea>
+      <label for="floatingTextarea">Oggetto</label>
     </div>
-    <select class="form-select mb-3" aria-label="Default select example">
-      <option selected>seleziona una categoria</option>
-      <option value="1">cat1</option>
-      <option value="2">cat2</option>
-      <option value="3">cat3</option>
-      <option value="3">cat3</option>
+    <select class="form-select mb-3" aria-label="Default select example" id="categoria">
+      <option selected >Seleziona una categoria</option>
+      
     </select>
     <div class="mb-3">
-      <div class="form-floating mb-3">
-        <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"
+      <div class="form-floating mb-3"  >
+        <textarea class="form-control " placeholder="Leave a comment here" id="messaggio" style="height: 100px"
           maxlength="500"></textarea>
-        <label for="floatingTextarea2">descrizione del problema</label>
+        <label for="floatingTextarea2">Descrizione del problema</label>
       </div>
     </div>
   
   <div class="form-check mb-3">
-    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+    <input class="form-check-input" type="checkbox" value="" id="privacy">
     <label class="form-check-label" for="defaultCheck1">
       Autorizzo al trattamento dei dati
     </label>
@@ -52,6 +49,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
+    <script src="../JS/InvioTicket.js"></script>
     <!-- Pulsante Home -->
 <div class="home-button">
   <a href="../HTML/Home.html" class="btn-home">Home</a>
