--- a/HTML/login.html
+++ b/HTML/login.html
@@ -21,7 +21,7 @@
     <footer>
         <p>&copy; 2025 Sito di Ticket. Tutti i diritti riservati.</p>
     </footer>
-    <script src="/JS/login.js"></script>
+    <script src="../JS/login.js"></script>
     <!-- Pulsante Home -->
 <div class="home-button">
     <a href="../HTML/home.html" class="btn-home">Home</a>
