Tolto Admin css e aggiunto Base.css

--- a/HTML/TicketOperatore.html
+++ b/HTML/TicketOperatore.html
@@ -40,7 +40,7 @@
 <div class="tabella">
   <table class="table table-striped">
       <thead>
-          <tr>
+          <tr class="riga_colonna">
               <th scope="col">#</th>
               <th scope="col">Email</th>
               <th scope="col" class="data-tb">Data apertura</th>
