--- a/HTML/home.html
+++ b/HTML/home.html
@@ -4,8 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Supporto - Sito di Ticket</title>
+    <link rel="stylesheet" href="../CSS/Base.css">
     <link rel="stylesheet" href="../CSS/home.css">
+   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 </head>
 <body>
     <header>
@@ -72,8 +75,8 @@
     </main>
 
     <!-- Footer -->
-    <footer>
-        <p>Hai bisogno di ulteriore aiuto? <a href="#">Contatta il supporto</a></p>
+    <footer class="footer_home">
+        <p>Hai bisogno di ulteriore aiuto? <a href="../HTML/InvioTicket.html">Contatta il supporto</a></p>
     </footer>
     
 
