--- a/HTML/login.html
+++ b/HTML/login.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login - Sito di Ticket</title>
+    <link rel="stylesheet" href="../CSS/Base.css">
     <link rel="stylesheet" href="../CSS/Login.css">
 </head>
 <body>
 
     <div class="container">
-        <h1>Accedi</h1>
-        <form id="loginForm" method="POST">
+        <h1 class="titolo_card">Accedi</h1>
+        <form id="loginForm" method="POST" class="blocco-body">
             <input type="text" id="email" placeholder="Email" required aria-label="Email" autocomplete="off">
             <input type="password" id="password" placeholder="Password" required aria-label="Password" autocomplete="off">
             <button type="submit">Accedi</button>
