fix home aggiornata

--- a/HTML/InvioTicket.html
+++ b/HTML/InvioTicket.html
@@ -14,6 +14,14 @@
 
 <body>
 
+<!-- Pulsante Home e Profilo-->
+<header>
+    <i class="fas fa-user-circle avatar"></i>
+    <div class="home-button">
+  <a href="../HTML/Home.html" class="btn-home">Home</a>
+</div>
+</header>
+
   <div class="titolo">
   <h1 class="titolo-form">Apri un ticket</h1>  </div>
 
@@ -51,10 +59,7 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
     <script src="../JS/InvioTicket.js"></script>
-    <!-- Pulsante Home -->
-<div class="home-button">
-  <a href="../HTML/Home.html" class="btn-home">Home</a>
-</div>
+
 </body>
 
 </html>
