--- a/HTML/Admin.html
+++ b/HTML/Admin.html
@@ -13,6 +13,10 @@
 
 <body>
 
+  <header>
+    <i class="fas fa-user-circle avatar"></i>
+</header>
+
   <div class="titolo">
     <h1 class="titolo-form ">I miei ticket</h1>
     </div>
