--- a/HTML/Chart.html
+++ b/HTML/Chart.html
@@ -10,10 +10,20 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="../CSS/Chart.css" />
   </head>
   <body>
     <!-- Header -->
+     <!-- Pulsante Home e Profilo-->
+<header>
+  <div class="header-btn" style="display: flex; align-items: center; justify-content: flex-start;">
+    <a href="../HTML/Home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
+    <a href="../HTML/Profile.html"><i class="fas fa-user-circle avatar" style="margin-right: 10px;"></i></a>
+  </div>
+</header>
+
+<!-- Titolo e Chart -->
     <div class="chart-container">
       <h2 class="titolo-form">Andamento Mensile dei Ticket: Aperti e Chiusi</h2>
       <canvas id="myChart" aria-label="Hello ARIA World"></canvas>
