--- a/HTML/InvioTicket.html
+++ b/HTML/InvioTicket.html
@@ -9,6 +9,8 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/Base.css">
     <link rel="stylesheet" href="../CSS/InvioTicket.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
 </head>
 
 
@@ -16,12 +18,13 @@
 
 <!-- Pulsante Home e Profilo-->
 <header>
-    <i class="fas fa-user-circle avatar"></i>
-    <div class="home-button">
-  <a href="../HTML/Home.html" class="btn-home">Home</a>
-</div>
+  <div class="header-btn" style="display: flex; align-items: center; justify-content: flex-start;">
+    <a href="../HTML/Home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
+    <a href="../HTML/Profile.html"><i class="fas fa-user-circle avatar" style="margin-right: 10px;"></i></a>
+  </div>
 </header>
 
+<!-- Titolo e Form -->
   <div class="titolo">
   <h1 class="titolo-form">Apri un ticket</h1>  </div>
 
