--- a/HTML/Registrazione.html
+++ b/HTML/Registrazione.html
@@ -6,9 +6,18 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.m.css" rel="stylesheet">
     <link rel="stylesheet" href="../CSS/Base.css">
     <link rel="stylesheet" href="../CSS/Registrazione.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
     <title>Registrazione</title>
 </head>
 <body>
+      <!-- Profilo e Home-->
+      <header>
+        <div class="header-btn" style="display: flex; align-items: center; justify-content: flex-start;">
+            <a href="../HTML/Home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
+            <a href="../HTML/Profile.html"><i class="fas fa-user-circle avatar" style="margin-right: 10px;"></i></a>
+          </div>
+    </header>
 
     <div class="Registrazione">
         <h1>Registrati</h1>
@@ -51,10 +60,8 @@
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
     <script src="../JS/Registrazione.js"></script>
-    <!-- Pulsante Home -->
-<div class="home-button">
-    <a href="../HTML/Home.html" class="btn-home">Home</a>
-</div>
+
+
        
 </body>
 </html>
