--- a/HTML/Ticket.html
+++ b/HTML/Ticket.html
@@ -9,9 +9,18 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="../CSS/Base.css">
     <link rel="stylesheet" href="../CSS/Ticket.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
 </head>
 
 <body>
+   <!-- Profilo e Home-->
+   <header>
+    <div class="header-btn" style="display: flex; align-items: center; justify-content: flex-start;">
+        <a href="../HTML/Home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
+        <a href="../HTML/Profile.html"><i class="fas fa-user-circle avatar" style="margin-right: 10px;"></i></a>
+      </div>
+</header>
 
   <div class="titolo">
     <h1 class="titolo-form ">I miei ticket</h1>
@@ -56,10 +65,7 @@
           </tbody>
   </table>
 </div>
-<!-- Pulsante Home -->
-<div class="home-button">
-  <a href="../HTML/Home.html" class="btn-home">Home</a>
-</div>
+
 </body>
 
 
