--- a/HTML/InvioTicket.html
+++ b/HTML/InvioTicket.html
@@ -40,8 +40,7 @@
     </select>
     <div class="mb-3">
       <div class="form-floating mb-3"  >
-        <textarea class="form-control " placeholder="Leave a comment here" id="messaggio" style="height: 100px"
-          maxlength="500"></textarea>
+        <textarea class="form-control " placeholder="Leave a comment here" id="messaggio" style="height: 100px"></textarea>
         <label for="floatingTextarea2">Descrizione del problema</label>
       </div>
     </div>
