--- a/HTML/home.html
+++ b/HTML/home.html
@@ -15,7 +15,11 @@
         <div class="header-btn" style="display: flex; align-items: center; justify-content: flex-start;">
             <a href="../HTML/Home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
             <a href="../HTML/Profile.html"><i class="fas fa-user-circle avatar" style="margin-right: 10px;"></i></a>
-          </div>
+        </div>
+        <div class="header-content">
+            <h1>Supporto</h1>
+            <p>Benvenuto nel nostro centro di supporto. Come possiamo aiutarti?</p>
+        </div>
     </header>
 
     <main>
