Fix bottone per admin

--- a/HTML/Admin.html
+++ b/HTML/Admin.html
@@ -28,11 +28,14 @@
     </div>
     <div class="blocco-body">
 
-<div class="pulsanti">
-<span class="dropdown">
-  <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    Filtri
-  </button>
+      <div class="pulsanti">
+        <a href="../HTML/Chart.html"><button type="submit" class="btn btn-primary">Statistiche</button></a>
+      </form>
+      
+      <span class="dropdown">
+        <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Filtri
+        </button>
   <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
     <button class="dropdown-item" type="button" id="tutti">Tutti</button>
     <button class="dropdown-item" type="button" id="APERTO">Aperti</button>
@@ -52,7 +55,7 @@
       <thead>
           <tr>
               <th scope="col">#</th>
-              <th scope="col">Nome</th>
+              <th scope="col">Email</th>
               <th scope="col">Operatore</th>
               <th scope="col" class="data-tb">Data apertura</th>
               <th scope="col" class="data-tb">Data chiusura</th>
