lavoro su home js + aggiunta tasto statistiche per admin

--- a/HTML/Admin.html
+++ b/HTML/Admin.html
@@ -24,7 +24,7 @@
 </header>
 
   <div class="titolo">
-    <h1 class="titolo-form ">I miei ticket</h1>
+    <h1 class="titolo-form ">Ticket</h1>
     </div>
     <div class="blocco-body">
 
