--- a/HTML/home.html
+++ b/HTML/home.html
@@ -24,9 +24,9 @@
 
     <main>
         <!-- Sezione Apri Ticket -->
-        <section class="open-ticket">
+        <section class="open-ticket" >
             <div class="ticket-container">
-                <a href="Ticket.html" class="open-ticket-btn">
+                <a href="Ticket.html" class="open-ticket-btn"  id="ticket-btn">
                     <i class="fas fa-ticket-alt"></i> Ticket
                 </a>
             </div>
@@ -43,10 +43,10 @@
 
     <!-- Footer -->
     <footer>
-        <p>Hai bisogno di ulteriore aiuto? <a href="#">Contatta il supporto</a></p>
+        <p>Hai bisogno di ulteriore aiuto? <a href="Ticket.html">Contatta il supporto</a></p>
     </footer>
     
 
-    <script defer src="/JS/Home.js"></script>
+    <script defer src="../JS/Home.js"></script>
 </body>
 </html>
