fix home e fix profilo

--- a/HTML/Profile.html
+++ b/HTML/Profile.html
@@ -22,11 +22,11 @@
     </header>
     
     <div class="card-profile"> 
-            <h1>Profile</h1>
+            <h1>Profilo</h1>
 
         <div class="profile">
             
-            <label for="nome-edit"><b>Nome</b></label>
+            <label for="nome-edit"><b>Nome:</b></label>
             <input type="text" id="nome-edit" style="display: none;">
         </div>
 
