--- a/HTML/home.html
+++ b/HTML/home.html
@@ -26,7 +26,7 @@
         <!-- Sezione Apri Ticket -->
         <section class="open-ticket" >
             <div class="ticket-container">
-                <a href="Ticket.html" class="open-ticket-btn"  id="ticket-btn">
+                <a href="#" class="open-ticket-btn"  id="ticket-btn">
                     <i class="fas fa-ticket-alt"></i> Ticket
                 </a>
             </div>
