--- a/HTML/home.html
+++ b/HTML/home.html
@@ -12,7 +12,11 @@
 <body>
     
     <header>
-        <i class="fas fa-user-circle avatar"></i>
+        <div class="header-btn" style="display: flex; align-items: center; justify-content: flex-start;">
+            <a href="../HTML/Home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
+            <a href="../HTML/Profile.html"><i class="fas fa-user-circle avatar" style="margin-right: 10px;"></i></a>
+        </div>
+        <div class="header-content">
             <h1>Supporto</h1>
             <p>Benvenuto nel nostro centro di supporto. Come possiamo aiutarti?</p>
         </div>
@@ -20,9 +24,9 @@
 
     <main>
         <!-- Sezione Apri Ticket -->
-        <section class="open-ticket">
+        <section class="open-ticket" >
             <div class="ticket-container">
-                <a href="Ticket.html" class="open-ticket-btn">
+                <a href="Ticket.html" class="open-ticket-btn"  id="ticket-btn">
                     <i class="fas fa-ticket-alt"></i> Ticket
                 </a>
             </div>
@@ -39,10 +43,10 @@
 
     <!-- Footer -->
     <footer>
-        <p>Hai bisogno di ulteriore aiuto? <a href="#">Contatta il supporto</a></p>
+        <p>Hai bisogno di ulteriore aiuto? <a href="Ticket.html">Contatta il supporto</a></p>
     </footer>
     
 
-    <script defer src="/JS/Home.js"></script>
+    <script defer src="../JS/Home.js"></script>
 </body>
 </html>
