--- a/HTML/Profile.html
+++ b/HTML/Profile.html
@@ -44,7 +44,7 @@
                 <button class="Ticket" id="ticket-btn" onclick="goToTickets()">I miei ticket</button>
                 <button class="edit-btn" id="edit-btn" onclick="editProfile()">Modifica Profilo</button>
                 <button class="edit-btn" id="save-btn"  onclick="saveProfile()" style="display: none;" >Salva</button>
-                <button href="../HTML/Home.html" id="btn-logout" class="btn-logout">Logout</button>
+                <button class = "btn-logout" id="btn-logout" onclick="logout()">Logout</button>
                 <button class="delete-btn" id="delete-btn" onclick="deleteAccount()">Elimina Profilo</button>
 
 
