Get all tickets

--- a/HTML/Registrazione.html
+++ b/HTML/Registrazione.html
@@ -39,11 +39,8 @@
                 
             </div>
             <div  class="form-group">
-
-                <input type="password" class="form" id="confermaPassword" placeholder="Conferma Password*"required>
+                <input type="password" class="form" id="confermaPassword" placeholder="conferma Password*"required>
                 <input type="checkbox" id="show-password" onclick="showPassword()">Mostra Password
-               
-
             </div>
             <div class>
                 <input type="checkbox" id="privacy" required>
