fix home footer

--- a/HTML/home.html
+++ b/HTML/home.html
@@ -43,7 +43,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>Hai bisogno di ulteriore aiuto? <a href="Ticket.html">Contatta il supporto</a></p>
+        <p id="footer-btn">Hai bisogno di ulteriore aiuto? <a href="#">Contatta il supporto</a></p>
     </footer>
     
 
