--- a/HTML/Admin.html
+++ b/HTML/Admin.html
@@ -30,6 +30,9 @@
       <div class="pulsanti">
         <a href="../HTML/Chart.html"><button type="submit" class="btn btn-primary">Statistiche</button></a>
       </form>
+
+      <a href="../HTML/RegistrazioneOperatore.html"><button class="btn btn-primary">Aggiungi un operatore + </button></a>
+
       
       <span class="dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
