Forse completo + nuova home

--- a/HTML/RegistrazioneOperatore.html
+++ b/HTML/RegistrazioneOperatore.html
@@ -14,8 +14,9 @@
 <body>
       <!-- Profilo e Home-->
       <header>
+        <img src="/logo.png" class="logo">
         <div class="header-btn" style="display: flex; align-items: center; justify-content: flex-start;">
-            <a href="../HTML/Home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
+            <a href="../HTML/home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
             <a href="../HTML/Profile.html"><i class="fas fa-user-circle avatar" style="margin-right: 10px;"></i></a>
           </div>
     </header>
@@ -46,9 +47,9 @@
                 <select id="categoria" class="form-control item" required>
                     <option value="" disabled selected>Seleziona una categoria</option>
                     <option value="1">Ordine e Spedizione</option>
-                    <option value="2">Rimborso</option>
+                    <option value="2">Account e Accesso</option>
                     <option value="3">Pagamento e Fatturazione</option>
-                    <option value="4">Account e Accesso</option>
+                    <option value="4">Rimborso</option>
                 </select>
             </div>
     
