--- a/HTML/Chart.html
+++ b/HTML/Chart.html
@@ -17,8 +17,9 @@
     <!-- Header -->
      <!-- Pulsante Home e Profilo-->
 <header>
+  <img src="/logo.png" class="logo">
   <div class="header-btn" style="display: flex; align-items: center; justify-content: flex-start;">
-    <a href="../HTML/Home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
+    <a href="../HTML/home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
     <a href="../HTML/Profile.html"><i class="fas fa-user-circle avatar" style="margin-right: 10px;"></i></a>
   </div>
 </header>
