--- a/HTML/Profile.html
+++ b/HTML/Profile.html
@@ -15,8 +15,9 @@
 <body>
     <!-- Profilo e Home-->
     <header>
+        <img src="/logo.png" class="logo">
         <div class="header-btn" style="display: flex; align-items: center; justify-content: flex-start;">
-            <a href="../HTML/Home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
+            <a href="../HTML/home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
             <a href="../HTML/Profile.html"><i class="fas fa-user-circle avatar" style="margin-right: 10px;"></i></a>
           </div>
     </header>
@@ -44,7 +45,7 @@
                 <button class="Ticket" id="ticket-btn" onclick="goToTickets()">I miei ticket</button>
                 <button class="edit-btn" id="edit-btn" onclick="editProfile()">Modifica Profilo</button>
                 <button class="edit-btn" id="save-btn"  onclick="saveProfile()" style="display: none;" >Salva</button>
-                <button href="../HTML/Home.html" id="btn-logout" class="btn-logout">Logout</button>
+                <button href="../HTML/home.html" id="btn-logout" class="btn-logout">Logout</button>
                 <button class="delete-btn" id="delete-btn" onclick="deleteAccount()">Elimina Profilo</button>
 
 
