--- a/HTML/login.html
+++ b/HTML/login.html
@@ -12,8 +12,9 @@
 <body>
     <!-- Profilo e Home-->
     <header>
+        <img src="/logo.png" class="logo">
         <div class="header-btn" style="display: flex; align-items: center; justify-content: flex-start;">
-            <a href="../HTML/Home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
+            <a href="../HTML/home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
             <a href="../HTML/Profile.html"><i class="fas fa-user-circle avatar" style="margin-right: 10px;"></i></a>
           </div>
     </header>
