COMPLETO: fix bottoni, esportazione grafico in PDF

--- a/HTML/Admin.html
+++ b/HTML/Admin.html
@@ -16,8 +16,9 @@
 <body>
    <!-- Profilo e Home-->
    <header>
+    <img src="/logo.png" class="logo">
     <div class="header-btn" style="display: flex; align-items: center; justify-content: flex-start;">
-      <a href="../HTML/Home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
+      <a href="../HTML/home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
       <a href="../HTML/Profile.html"><i class="fas fa-user-circle avatar" style="margin-right: 10px;"></i></a>
     </div>
 </header>
@@ -29,10 +30,8 @@
 
       <div class="pulsanti">
         <a href="../HTML/Chart.html"><button type="submit" class="btn btn-primary">Statistiche</button></a>
+        <a href="../HTML/RegistrazioneOperatore.html"><button class="btn btn-primary">Aggiungi un operatore + </button></a>
       </form>
-
-      <a href="../HTML/RegistrazioneOperatore.html"><button class="btn btn-primary">Aggiungi un operatore + </button></a>
-
       
       <span class="dropdown">
         <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
