--- a/HTML/Registrazione.html
+++ b/HTML/Registrazione.html
@@ -13,8 +13,9 @@
 <body>
       <!-- Profilo e Home-->
       <header>
+        <img src="/logo.png" class="logo">
         <div class="header-btn" style="display: flex; align-items: center; justify-content: flex-start;">
-            <a href="../HTML/Home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
+            <a href="../HTML/home.html"><i class="fa-solid fa-house home-button" style="margin-right: 10px;"></i></a>
             <a href="../HTML/Profile.html"><i class="fas fa-user-circle avatar" style="margin-right: 10px;"></i></a>
           </div>
     </header>
@@ -40,6 +41,7 @@
             </div>
             <div  class="form-group">
                 <input type="password" class="form" id="confermaPassword" placeholder="conferma Password*"required>
+                <input type="checkbox" id="show-password" onclick="showPassword()">Mostra Password
             </div>
             <div class>
                 <input type="checkbox" id="privacy" required>
