--- a/HTML/Chart.html
+++ b/HTML/Chart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chart</title>
+    <title>Statistiche</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,11 +25,19 @@
 </header>
 
 <!-- Titolo e Chart -->
-<div class="chart-container">
-  <h2 class="titolo-form">Andamento Mensile dei Ticket: Aperti e Chiusi</h2>
-  <canvas id="myChart"></canvas>
-  <button id="exportPDF" class="btn btn-primary mt-3">Esporta PDF</button>
-</div>
+    <div class="chart-container">
+      <h2 class="titolo-form">Andamento Mensile dei Ticket: Aperti e Chiusi</h2>
+      <canvas id="myChart" aria-label="Hello ARIA World"></canvas>
+
+    </div>
+
+    <div class="exportPDF">    
+      <button id="exportPDF" class="exportPDF-btn">
+        <i class="fa-solid fa-download"></i> Esporta PDF
+      </button>    
+    </div>
+
+
 
 
     <script
@@ -38,8 +46,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="../JS/Chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
+    <script src="../JS/Chart.js"></script>
   </body>
 </html>
