--- a/HTML/TicketOperatore.html
+++ b/HTML/TicketOperatore.html
@@ -14,7 +14,7 @@
 <body>
 
   <div class="titolo">
-    <h1 class="titolo-form ">I miei ticket</h1>
+    <h1 class="titolo-form ">ticket</h1>
     </div>
     <div class="blocco-body">
 
